--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 }
 
 header { 
-  background-color: lightpink;
   display: flex;
   justify-content: flex-end;
   flex-direction: row;
@@ -16,15 +15,15 @@ header {
 header a { 
   text-decoration: none;
   margin-right: 5rem;
-  color: white;
   font-weight: bold;
 }
+
 
 
 header button { 
   font-size: 1.1rem;
   padding: 2px 10px;
   border-radius: 9999px;
-
+  border: 1px solid white;
 }
 
