--- a/style.css
+++ b/style.css
@@ -4,6 +4,17 @@
   box-sizing: border-box;
 }
 
+body { 
+  background-image: url(./img/wallpaperflare.com_wallpaper\ \(3\).jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  width: 100vw;
+  height: 100vh;
+  color: white;
+}
+
 header { 
   display: flex;
   justify-content: flex-end;
@@ -16,8 +27,13 @@ header a {
   text-decoration: none;
   margin-right: 5rem;
   font-weight: bold;
+  color: white;
+  margin-top: 20px;
 }
 
+header .links {
+  margin-right: 2rem;
+}
 
 
 header button { 
@@ -25,5 +41,54 @@ header button {
   padding: 2px 10px;
   border-radius: 9999px;
   border: 1px solid white;
+  margin-right: 2rem;
+  background-color: transparent;
+  color: white;
+  
 }
 
+main { 
+  display: flex;
+  align-items: center;
+  height: 80vh;
+  margin-left: 5rem;
+
+}
+
+.container { 
+  padding-top: 1rem;
+}
+
+
+.description { 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* background-color: rgba(134, 31, 31, 0.5); */
+  border-radius: .5rem;
+  width: 25%;
+}
+
+button { 
+  cursor: pointer;
+}
+
+h1 { 
+  margin: 2rem 0px 2rem 0px;
+  font-size: 3rem;
+}
+
+.details p { 
+  line-height: 1.5rem;
+}
+
+.seasons { 
+  border-bottom: 1px solid white;
+  padding-bottom: .2rem;
+}
+
+.details button  { 
+  margin-top: 2rem;
+  padding: .7rem 1rem;
+  border-radius: 9999px;
+}
